--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,12 @@
 .idea
 
 # Build files
-.gradle/build/
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log/OS Files
+*.log
+.DS_Store
